[fix] toolbar alignment

--- a/sources/styles/app.css
+++ b/sources/styles/app.css
@@ -1,7 +1,3 @@
-/* toolbar */
-.webix_el_label.main_label{
-	line-height:40px;
-}
 /* dataview with qa cards */
 .qacards .webix_dataview_item,
 .qacards .webix_dataview_item.webix_selected{
